<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_auth_scene"
    android:background="@drawable/beach"
    android:id="@+id/auth_layout"
    tools:context=".ui.auth.AuthActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_app_full"
        android:transitionName="logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="204dp"
        android:text="@string/message_login_page"
        android:textColor="@color/navi_900"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textColor="@color/navi_900"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        android:textColor="@color/navi_900"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email_login" />

    <TextView
        android:id="@+id/tv_not_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/not_account"
        android:textColor="@color/navi_900"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email_login" />

    <com.dicoding.myuserstory.constomview.EmailEditText
        android:id="@+id/ed_email_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="3dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:textAppearance="@style/content_font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <com.dicoding.myuserstory.constomview.MyEditText
        android:id="@+id/ed_password_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:textAppearance="@style/content_font_small"
        app:layout_constraintEnd_toEndOf="@+id/ed_email_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ed_email_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:passwordToggleEnabled="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_guest"
        style="@style/button_navi"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/guest"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/button_navi"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="244dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/button_yellow"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/btn_guest"
        app:layout_constraintStart_toStartOf="@+id/btn_guest"
        app:layout_constraintTop_toBottomOf="@+id/btn_guest" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>