<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:iconTint="@color/light_blue_50"
        android:title="@string/setting"
        app:showAsAction="always" />

    <item
        android:id="@+id/exit"
        android:iconTint="@color/light_blue_50"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="always" />
</menu>